compiler/tests/fa/errors/pure_global_write.salam
// انتظار: خطا۰۱۳
// زبان: فارسی
متغیر جمع : صحیح = 0

خالص تابع افزودن(مقدار : صحیح) : صحیح:
    جمع = جمع + مقدار
    بازگشت جمع
پایان

تابع اصلی:
    چاپ(افزودن(2))
پایان
